--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,23 +8,38 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+/*changed the .header to head as its not a class no more*/
+
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+.nav{
+    padding-top:15px;
+    margin-right: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    display: inline-block;
+    font-size: 48px;
+    list-style-type: none;
+    text-decoration: none;
+    color: #d9dcd6;
+}
+
+
+ header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+ header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +47,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+  header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+ header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -44,6 +59,7 @@ body {
 a {
     color: #ffffff;
     text-decoration: none;
+    
 }
 
 p {
@@ -205,6 +221,5 @@ footer {  /*changed this format as it was for a class so removed the . */
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
-   
-   
-  }
+}
+
