--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ header h1 .seo {
     font-size: 20px;
 }
 
-  header nav ul {
+header nav ul {
     list-style-type: none;
 }
 
@@ -49,7 +49,6 @@ header h1 .seo {
 a {
     color: #ffffff;
     text-decoration: none;
-    
 }
 
 p {
@@ -65,11 +64,13 @@ p {
     background-position: center;
 }
 
+/*This isnt the right way*/
 .float-left {
     float: left;
     margin-right: 25px;
 }
 
+/*This isnt the right way*/
 .float-right {
     float: right;
     margin-left: 25px;
@@ -195,7 +196,7 @@ p {
 }
 
 
-footer h2 { /*changed this format as it was for a class so removed the . */
+footer h4 { /*changed this format as it was for a class so removed the . */
     font-size: 20px;
 }
 
