--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,10 @@ body {
 
 /*changed the .header to head as its not a class no more*/
 
+
+main{
+
+}
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -64,13 +68,13 @@ p {
     background-position: center;
 }
 
-/*This isnt the right way*/
+
 .float-left {
     float: left;
     margin-right: 25px;
 }
 
-/*This isnt the right way*/
+
 .float-right {
     float: right;
     margin-left: 25px;
@@ -93,18 +97,6 @@ p {
     background-color: #2589bd;
 }
 
-aside{
-    margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
-    width: 20%;
-    height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
-}
-
-
 .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
@@ -119,6 +111,9 @@ aside{
     margin-bottom: 32px;
     color: #ffffff;
 }
+ .element{
+     display:inline;
+ }
 
 .benefit-lead h3 {
     margin-bottom: 10px;
@@ -139,21 +134,24 @@ aside{
     display: block;
     margin: 10px auto;
     max-width: 150px;
+    height:150px;
 }
 
 .benefit-brand img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
+    height:150px;
 }
 
 .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
+    height:150px;
 }
 
-.search-engine-optimization {
+#search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -162,7 +160,7 @@ aside{
     color: #ffffff;
 }
 
-.online-reputation-management {
+#online-reputation-management {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -171,7 +169,7 @@ aside{
     color: #ffffff;
 }
 
-.social-media-marketing {
+#social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -180,33 +178,32 @@ aside{
     color: #ffffff;
 }
 
-.search-engine-optimization img {
+#search-engine-optimization img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
+#online-reputation-management img {
     max-height: 200px;
 }
 
-.social-media-marketing img {
+#social-media-marketing img {
     max-height: 200px;
 }
 
-.search-engine-optimization h2 {
+#search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
+#online-reputation-management h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.social-media-marketing h2 {
+#social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
 
 
 footer h4 { /*changed this format as it was for a class so removed the . */
@@ -220,4 +217,3 @@ footer {  /*changed this format as it was for a class so removed the . */
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
-
